# jaqi

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: check.yml  docs.yml  release.yml  test.yml
docs/: .gitignore  Makefile  README.md  advanced.dj  cli.dj  corelang.dj  examples.dj  formats.dj  header.1  header.html  htm-meta.yaml  intro.dj  man-epilogue.dj  man-prologue.dj  stdlib.dj  template.xhtml
jaq/: Cargo.toml
jaq-all/: Cargo.toml
jaq-all/examples/: main.rs
jaq-all/src/: data.rs  load.rs
jaq-all/tests/: report.rs
jaq-core/src/: compile.rs  filter.rs  val.rs
jaq-fmts/: Cargo.toml
jaq-fmts/src/: lib.rs
jaq-fmts/src/read/: cbor.rs  xml.rs  yaml.rs
jaq-fmts/src/write/: cbor.rs  formats.rs  mod.rs  tabular.rs
jaq-fmts/tests/: formats.rs  funs.rs
jaq-json/: Cargo.toml
jaq-json/src/: lib.rs  num.rs  read.rs
jaq-json/tests/: funs.rs
jaq-play/: Cargo.toml
jaq-play/src/: lib.rs
jaq-std/: Cargo.toml
jaq-std/src/: lib.rs  time.rs
jaq-std/tests/: funs.rs
jaq/src/: cli.rs  funs.rs  help.txt  main.rs
jaqi/: Cargo.toml
jaqi/src/: cli.rs  funs.rs  help.txt  main.rs
jaqi/tests/: golden.rs
