[workspace]
members = [
    "jaq-core",
    "jaq-std",
    "jaq-json",
    "jaq-fmts",
    "jaq-all",
    "jaq",
    "jaq-play",
]

resolver = "2"

[workspace.dependencies]
jaq-core = { version = "3.1.0", path = "jaq-core", default-features = false }
jaq-std  = { version = "3.0.1", path = "jaq-std", default-features = false  }
jaq-json = { version = "2.0.1", path = "jaq-json", default-features = false }
jaq-fmts = { version = "0.1.0", path = "jaq-fmts", default-features = false }
jaq-all  = { version = "0.2.0", path = "jaq-all", default-features = false  }

[profile.release]
strip = true
codegen-units = 1
