[package]
name = "jaqi"
version = "3.2.0"
authors = [
    "Vlad Lasky <github@vladlasky.com>",
    "Michael Färber <michael.faerber@gedenkt.at>",
]
edition = "2021"
license = "MIT"
readme = "../README.md"
description = "A fast JSON query tool, forked from jaq"
repository = "https://github.com/vlasky/jaqi"
keywords = ["json", "query", "jq"]
categories = ["command-line-utilities", "compilers", "parser-implementations"]
rust-version = "1.70"

[features]
default = ["mimalloc"]

[dependencies]
jaq-all  = { workspace = true, features = ["formats", "std-all"] }

dirs = { version = "6.0" }
env_logger = { version = "0.10.0", default-features = false }
log = { version = "0.4.17" }
mimalloc = { version = "0.1.29", default-features = false, optional = true }
rustyline = { version = "13.0.0", default-features = false, features = ["with-file-history"] }
tempfile = "3.3.0"
